# pdfhenshu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: PORTABLE_WINDOWS.md  VSCODE_WINDOWS.md
include/: config.h
runtime/: pdfhenshu.ini
runtime/src/: config.c
src/: config.c  main.c
tools/: doctor.bat  package_portable.bat
